# lc-coreutils

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  error.c  version.h.in
.github/workflows/: linux.yml  macos.yml  macos.yml.disabled
arch/: CMakeLists.txt  arch.c  helper.h.in
arch/tests/: CMakeLists.txt  arch.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
basename/: CMakeLists.txt  basename.c
basename/tests/: CMakeLists.txt  basename-doesnt-segfault.sh  basename-help-doesnt-segfault.sh  basename-matches-prgname.sh  basename-multi-doesnt-segfault.sh  basename-suffix.sh
chmod/: CMakeLists.txt  chmod.c
chmod-parse/: CMakeLists.txt  chmod-parse.c  chmod-parse.h
chmod-parse/tests/: CMakeLists.txt  chmod-parse-test1.c  chmod-parse-test10.c  chmod-parse-test11.c  chmod-parse-test12.c  chmod-parse-test13.c  chmod-parse-test14.c  chmod-parse-test15.c  chmod-parse-test16.c  chmod-parse-test17.c  chmod-parse-test18.c  chmod-parse-test19.c  chmod-parse-test2.c  chmod-parse-test3.c  chmod-parse-test4.c  chmod-parse-test5.c  chmod-parse-test6.c  chmod-parse-test7.c  chmod-parse-test8.c  chmod-parse-test9.c
chmod/tests/: CMakeLists.txt  chmod-mode-correct.sh  chmod-octal-correct.sh
dirname/: CMakeLists.txt  dirname.c
dirname/tests/: CMakeLists.txt  dirname-matches-prgname.sh  dirname-version-doesnt-segfault.sh  dirname-zero-doesnt-segfault.sh
echo/: .gdb_history  CMakeLists.txt  Makefile  coreutils_8.28-1ubuntu1_amd64.deb  echo
echo/src/: echo.c
error/: CMakeLists.txt  error.c  error.h
false/: CMakeLists.txt  Makefile
false/src/: false.c
hashfile/: CMakeLists.txt  Makefile
hashfile/src/: common.h  hcommon.c  main.cpp  md5.c  select_hash.h  sha2.c
hashfile/tests/: CMakeLists.txt  b2sums  i0  i1  i10  i100  i101  i102  i103  i104  i105  i106  i107  i108  i109  i11  i110  i111  i112  i113  i114  i115  i116  i117  i118  i119  i12  i120  i121  i122  i123  i124  i125  i126  i127  i128  i129  i13  i130  i131  (+225 more)
install/: CMakeLists.txt  install.c
link/: CMakeLists.txt  link.c
link/tests/: CMakeLists.txt  a0  a1  a10  a100  a101  a102  a103  a104  a105  a106  a107  a108  a109  a11  a110  a111  a112  a113  a114  a115  a116  a117  a118  a119  a12  a120  a121  a122  a123  a124  a125  a126  a127  a128  a13  a14  a15  a16  a17  (+98 more)
mkdir/: CMakeLists.txt  mkdir.c
mkdir/tests/: CMakeLists.txt  test-mkdir-mode-long.sh  test-mkdir-mode-suid.sh  test-mkdir-mode.sh  test-mkdir-parents-abs.sh  test-mkdir-parents.sh  test-mkdir.sh
mkfifo/: CMakeLists.txt  mkfifo.c
mkfifo/tests/: CMakeLists.txt  mkfifo-is-pipe.sh  mkfifo-read-0.c  mkfifo-test-rw.sh  mkfifo-test-sanity.sh
mknod/: CMakeLists.txt  mknod.c
mknod/tests/: CMakeLists.txt  mknod-creates-pipe.sh  mknod-mode-long.sh  mknod-mode-separated.sh  mknod-mode.sh
nohup/: CMakeLists.txt  src.c
nohup/test/: CMakeLists.txt  nohuptest.c  nohuptest0.c
pwd/: CMakeLists.txt  pwd.c
pwd/tests/: CMakeLists.txt  test-cd-link-pwd.sh  test-cd-pwd.sh  test-pwd.sh
rmdir/: CMakeLists.txt  rmdir.c
rmdir/tests/: CMakeLists.txt  rmdir-parents.sh  rmdir-single.sh
true/: CMakeLists.txt  Makefile  false  true
true/src/: true.c
unlink/: CMakeLists.txt  unlink.c
unlink/tests/: CMakeLists.txt  unlink-remove-file.sh
which/: CMakeLists.txt  which.c
which/tests/: CMakeLists.txt  dummy  test-which.sh
yes/: CMakeLists.txt  yes.c
yes/tests/: CMakeLists.txt  yes-read-string.sh  yes-read-y.sh
